--- a/src/data/components/partner/partner.us.yaml
+++ b/src/data/components/partner/partner.us.yaml
@@ -6,7 +6,9 @@ partners:
   tagline: "Who is hiring our students?"
   sub_heading: |
     Top companies hire 4Geeks graduates, with 84% landing jobs within 6 months of graduation thanks to their skills and our personalized career support. Our grads don’t just get hired—they launch successful careers and consistently earn recognition for their technical expertise and professionalism:   
-    \n "I’m continually impressed by the depth of knowledge possessed by 4Geeks students. One of my hires ended up becoming a team leader." - CodeNinjas.
+    
+    <br/>
+     "I’m continually impressed by the depth of knowledge possessed by 4Geeks students. One of my hires ended up becoming a team leader." - CodeNinjas.
   
   footer_tagline: "438 COMPANIES"
   footer_button: "Review our latest hirings"
