--- a/src/data/course/datascience-ml.us.yaml
+++ b/src/data/course/datascience-ml.us.yaml
@@ -18,7 +18,7 @@ apply_form:
 seo_title: "Data Science and Machine Learning Bootcamp"
 header:
   title: "DATA SCIENCE AND MACHINE LEARNING WITH AI"
-  paragraph: "Break into one of tech’s fastest-growing, highest-paying fields. Learn to analyze raw data, build predictive models, and use AI tools to solve real-world problems—backed by expert mentorship, hands-on learning, and the option of a job guarantee."
+  paragraph: "Break into one of tech’s fastest-growing, highest-paying fields. Learn to analyze data, build predictive models, and use AI tools to solve real-world problems—backed by expert mentorship, hands-on learning, and the option of a job guarantee."
   image: "../../../static/images/bg/circles.jpg"
   image_alt: "circles"
 
@@ -61,7 +61,7 @@ course_instructors:
       linkedin: "https://www.linkedin.com/in/alexismena/"
 
 badges:
-  paragraph: "Prepare to thrive in today's AI-powered tech industry with hyperpersonalized learning, unlimited 1:1 mentorship, and career support for life. Recognized by Course Report as one of the world's top <a href='/us/coding-bootcamp'>coding bootcamps</a>, chosen by Forbes as best bootcamp for students on a budget (2024), and rated 4.9/5 on SwitchUp. Licensed by the Florida Department of Education."
+  paragraph: "Prepare to thrive in today's AI-powered tech industry with hyperpersonalized learning, unlimited 1:1 mentorship, and career support for life. Recognized by Course Report as one of the world's top coding bootcamps, chosen by Forbes as best bootcamp for students on a budget (2024), and rated 4.9/5 on SwitchUp. Licensed by the Florida Department of Education."
 
 # TWO COLUMNS
 two_columns:
@@ -256,7 +256,7 @@ two_columns_rigo:
     heading_image:
       src: "/images/rigobot-logo.png"
   sub_heading:
-    text: "In-person instruction, unlimited mentorship, and AI tools built for smarter, faster progress."
+    text: "Live instruction, unlimited mentorship, and AI tools built for smarter, faster progress."
     font_size: ["24px","24px","22px","22px","20px"]
     style: '{"margin":"0", "font-weight":"300", "text-align": "justify" }'
   content:
